--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 									id="name-input" required />
 								<p class="input_t input_t2">Телефон</p>
 								<input type="text" placeholder="Телефон" class="input modal-window__input" name="form-tel"
-									id="phone-input" required />
+									id="phone-input-2" required />
 								<div class="modal-window__checkbox-section">
 									<input type="checkbox" id="personal" class="modal-window__checbox-input" required />
 									<label class="modal-window__checkbox-text" for="personal"> Я даю согласие на обработку
